# AlphaZero

./: .gitignore  CMakeLists.txt  README.md  alpha_zero.py  chess_env.py  chess_utils.py  learn.py  main.py  multiproc.py  self_play.py  utils.py
alphazero/: chess_utils.py  mcts.py  mcts_old.py  model.py  script.py
alphazero/mcts/: CMakeLists.txt  chess_utils.cpp  main.cpp  mcts.cpp  mcts.h  mcts.py  test.cpp
logs/: events.out.tfevents.1624850952.MacBook-Air.local.23483.0  events.out.tfevents.1624850952.MacBook-Air.local.23483.1  events.out.tfevents.1624851223.MacBook-Air.local.23511.0  events.out.tfevents.1624851223.MacBook-Air.local.23511.1  events.out.tfevents.1624899117.MacBook-Air.local.24129.0  events.out.tfevents.1624899117.MacBook-Air.local.24129.1  events.out.tfevents.1624901177.MacBook-Air.local.24286.0  events.out.tfevents.1624901177.MacBook-Air.local.24286.1  events.out.tfevents.1624904176.MacBook-Air.local.24799.0  events.out.tfevents.1624904176.MacBook-Air.local.24799.1  events.out.tfevents.1624904177.MacBook-Air.local.24801.0  events.out.tfevents.1624904177.MacBook-Air.local.24801.1  events.out.tfevents.1624904221.MacBook-Air.local.24818.0  events.out.tfevents.1624904221.MacBook-Air.local.24818.1  events.out.tfevents.1624904222.MacBook-Air.local.24821.0  events.out.tfevents.1624904222.MacBook-Air.local.24821.1  events.out.tfevents.1624904316.MacBook-Air.local.24844.0  events.out.tfevents.1624904316.MacBook-Air.local.24844.1  events.out.tfevents.1624904317.MacBook-Air.local.24846.0  events.out.tfevents.1624904317.MacBook-Air.local.24846.1  events.out.tfevents.1624904860.MacBook-Air.local.24916.0  events.out.tfevents.1624904860.MacBook-Air.local.24916.1  events.out.tfevents.1624904861.MacBook-Air.local.24923.0  events.out.tfevents.1624904861.MacBook-Air.local.24923.1  events.out.tfevents.1624904861.MacBook-Air.local.24924.1  events.out.tfevents.1624904950.MacBook-Air.local.24939.0  events.out.tfevents.1624904950.MacBook-Air.local.24939.1  events.out.tfevents.1624904951.MacBook-Air.local.24943.0  events.out.tfevents.1624904951.MacBook-Air.local.24943.1  events.out.tfevents.1624904951.MacBook-Air.local.24944.0  events.out.tfevents.1624904951.MacBook-Air.local.24944.1  events.out.tfevents.1624905011.MacBook-Air.local.24958.0  events.out.tfevents.1624905012.MacBook-Air.local.24958.1  events.out.tfevents.1624905012.MacBook-Air.local.24966.0  events.out.tfevents.1624905012.MacBook-Air.local.24966.1  events.out.tfevents.1624905012.MacBook-Air.local.24967.0  events.out.tfevents.1624905012.MacBook-Air.local.24967.1  events.out.tfevents.1624905076.MacBook-Air.local.24979.0  events.out.tfevents.1624905076.MacBook-Air.local.24979.1  events.out.tfevents.1624905077.MacBook-Air.local.24989.0  (+24 more)
